--- a/bibliografia/bibliografia.bib
+++ b/bibliografia/bibliografia.bib
@@ -1,5 +1,101 @@
 % Encoding: UTF-8
 
+@Article{Edozie2025,
+  author    = {Edozie, E. and Shuaibu, A. N. and Sadiq, B. O.},
+  title     = {Artificial intelligence advances in anomaly detection for telecom networks},
+  journal   = {Artificial Intelligence Review},
+  year      = {2025},
+  publisher = {Springer},
+  url       = {https://link.springer.com/article/10.1007/s10462-025-11108-x}
+}
 
+@Article{Ali2023,
+  author    = {Ali, Shaker AbdulAziz K.},
+  title     = {Anomaly Detection in Telecommunication Networks: Towards Proactive Management},
+  journal   = {KUEY Journal},
+  year      = {2023},
+  volume    = {30},
+  number    = {5},
+  url       = {https://kuey.net/index.php/kuey/article/download/3849/2547/8832}
+}
+
+@Article{Schummer2024,
+  author    = {Schummer, P.},
+  title     = {Machine Learning-Based Network Anomaly Detection: Design, Implementation, and Evaluation},
+  journal   = {AI},
+  year      = {2024},
+  volume    = {5},
+  number    = {4},
+  pages     = {2967--2983},
+  publisher = {MDPI},
+  url       = {https://www.mdpi.com/2673-2688/5/4/143}
+}
+
+@Article{Moharam2025,
+  author    = {Moharam, M. H.},
+  title     = {Anomaly detection using machine learning and adopted digital twin concepts in radio environments},
+  journal   = {Scientific Reports},
+  year      = {2025},
+  volume    = {15},
+  publisher = {Nature},
+  url       = {https://www.nature.com/articles/s41598-025-02759-5}
+}
+
+@misc{GNS3,
+  author       = {GNS3 Technologies},
+  title        = {GNS3 -- Graphical Network Simulator},
+  howpublished = {\url{https://www.gns3.com/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
+
+@TechReport{SSH,
+  author      = {Ylonen, T. and Lonvick, C.},
+  title       = {The Secure Shell (SSH) Protocol Architecture},
+  institution = {IETF},
+  year        = {2006},
+  number      = {RFC 4251},
+  url         = {https://www.rfc-editor.org/rfc/rfc4251}
+}
+
+@misc{FastAPI,
+  author       = {Ramírez, Sebastián},
+  title        = {FastAPI Documentation},
+  howpublished = {\url{https://fastapi.tiangolo.com/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
+
+@misc{Vue,
+  author       = {Vue.js Community},
+  title        = {Vue.js -- The Progressive JavaScript Framework},
+  howpublished = {\url{https://vuejs.org/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
+
+@misc{Bootstrap,
+  author       = {Bootstrap Team},
+  title        = {Bootstrap Documentation},
+  howpublished = {\url{https://getbootstrap.com/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
+
+@misc{ChartJS,
+  author       = {Chart.js Developers},
+  title        = {Chart.js Documentation},
+  howpublished = {\url{https://www.chartjs.org/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
+
+@misc{JWT,
+  author       = {Auth0},
+  title        = {Introduction to JSON Web Tokens},
+  howpublished = {\url{https://jwt.io/introduction/}},
+  note         = {Accessed: 2025-08-16},
+  year         = {2024}
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
