--- a/capitulos/Introduccion.tex
+++ b/capitulos/Introduccion.tex
@@ -7,3 +7,8 @@
 
 \chapter{Introducción}
 
+\section{Motivación}
+
+La gestión de redes de telecomunicaciones se enfrenta a un escenario cada vez más complejo, en el que la administración manual de dispositivos resulta ineficiente y propensa a errores. La creciente demanda de disponibilidad y rapidez en la resolución de incidencias ha impulsado la necesidad de automatizar procesos de monitorización y configuración. En este contexto, el uso de APIs para interactuar con dispositivos de red se ha convertido en un elemento clave para agilizar tareas de supervisión, mejorar la interoperabilidad y reducir los tiempos de respuesta de los administradores.
+
+La motivación de este proyecto surge precisamente de esta necesidad: desarrollar un sistema que integre tecnologías web y APIs para obtener información en tiempo real de los routers y automatizar tanto la supervisión como ciertas operaciones de gestión. Tal y como indican trabajos recientes en la literatura, la incorporación de automatización y monitorización mejora la capacidad de respuesta y refuerza la fiabilidad de las infraestructuras \citep{Schummer2024}.
