--- a/include/configuracioninicial.tex
+++ b/include/configuracioninicial.tex
@@ -1,4 +1,5 @@
 % !TeX root = ../TFG-TFM_EPS_UA.tex
+% !TeX encoding = UTF-8
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Plantilla TFG/TFM
 % Escuela Politécnica Superior de la Universidad de Alicante
