--- a/include/configuraciontitulacion.tex
+++ b/include/configuraciontitulacion.tex
@@ -1,3 +1,4 @@
+% !TeX root = ../TFG-TFM_EPS_UA.tex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Plantilla TFG/TFM
 % Escuela Politécnica Superior de la Universidad de Alicante
